--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello Everyone</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic placeat repudiandae ratione voluptatem nostrum aspernatur inventore laboriosam, iure incidunt quod tempore nulla rem! Corporis aspernatur veniam, quaerat quos error aliquid.</p>
     <script src="js/app.js"></script>
 </body>
 </html>
